--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<section class="container-fluid bg-gray">
 		<div class="row">
 			<div class="col-sm-4">
-				<img src="imágenes/valores.png" Alt="Valores">
+				<img src=""C:\Users\DELL\OneDrive\Documentos\SEGUNDO AÑO CM\INFORMATICA\web\webmundo\Imágenes\valores.png"" Alt="Valores">
 			</div>
 		<div class= "col-sm-8">
 			<h2>Nuestros valores</h2>
@@ -292,4 +292,5 @@ $(document).ready(function(){
 })
 </script>
 </body>
+
 </html>
